# ECE4721J

./: .gitattributes  .gitignore  Changelog.md  Makefile  README.md  pyproject.toml
.feature_cache/: TRMUOZE12903CDF721.feature.json
.gitea/issue_template/: bug.md  features.md
.gitea/workflows/: push.yaml  release.yaml
homework/h2/: README.md
homework/h2/src/: Makefile
homework/h3/: README.md
homework/h3/src/: Makefile
homework/h4/: README.md
homework/h4/src/: Makefile  ex1.sql  ex2.sql  ex3.sql  plot.r  schema.sql
homework/h5/: README.md
homework/h5/src/: Makefile  ex3.py
homework/h6/: README.md
homework/h6/src/: Makefile  gd.py
lab/l2/: README.md
lab/l2/src/: .gitignore  Makefile  generator.sh  mapper.sh  reducer.sh
lab/l3/: README.md
lab/l6/: README.md
project/: README.md  pyproject.toml
project/presentation/: focs-poster.sty  focs-slides.sty  poster.tex  slides.tex
project/src/: README.md
src/: Makefile  README.md
src/extract/: README.md  main.py  requirements.txt  sample_schema.json
src/m1/: Makefile  Song.avsc  compress.ipynb  compress.py  create_aggregate_file.py  display_song.py  extract.py  h5_2_avro.py  h5_to_avro.py  h5_to_avro_nonspark.py  hdf5_getters.py  hdf5_utils.py  merge_avro.py  msd.avsc  msd_meta.avsc  msd_year_prediction.avsc  requirements.txt
src/m2/: drillQueriesTemaplate.sql  drillQuerries.SQL  drillQuerries.sql  drill_queries.sql  drill_queries_template.sql
src/year_prediction/: extract_timbre.py  ml_models.py  prediction.py
year-data/: aggregate_year_prediction.json  input_song_features.json
(+96 files in other folders)
