[project]
name = "ece4721-project"
version = "0.1.0"
description = ""
authors = [
    {name = "jon-lee",email = "jon-lee@sjtu.edu.cn"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
